--- a/views/visiteurs/index.ejs
+++ b/views/visiteurs/index.ejs
@@ -59,7 +59,7 @@
                         
                         <!-- Nav item 1 Demos -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle active" href="/info" id="homeMenu" data-bs-toggle="dropdown" >Home</a>
+                            <a class="nav-link  active" href="/info" id="homeMenu"  >Home</a>
                             
                         </li>
     
@@ -67,9 +67,9 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="pagesMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
 							<ul class="dropdown-menu" aria-labelledby="homeMenu">
-                                <li> <a class="dropdown-item" href="info/article/juridique">jurudique</a></li>
-                                <li> <a class="dropdown-item" href="info/article/scientifique">scientifique</a></li>
-                                <li> <a class="dropdown-item" href="info/index-2.html">et quelle que chose </a></li>
+                                <li> <a class="dropdown-item" href="/info/article/juridique">jurudique</a></li>
+                                <li> <a class="dropdown-item" href="/info/article/scientifique">scientifique</a></li>
+                                <li> <a class="dropdown-item" href="/info/index-2.html">et quelle que chose </a></li>
 							</ul>	
                         </li>
     
