--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -59,20 +59,18 @@
                         
                         <!-- Nav item 1 Demos -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle active" href="#" id="homeMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
-                            <ul class="dropdown-menu" aria-labelledby="homeMenu">
-                                <li> <a class="dropdown-item" href="index.html">Home default</a></li>
-                                <li> <a class="dropdown-item" href="index-lazy.html">Home lazy load</a></li>
-                                <li> <a class="dropdown-item" href="index-2.html">Magazine classic</a></li>
-                                <li> <a class="dropdown-item" href="index-3.html">Magazine</a></li>
-                                <li> <a class="dropdown-item" href="index-4.html">Home cards</a></li>
-                                <li> <a class="dropdown-item active" href="index-5.html">Blog classic</a></li>
-                            </ul>
+                            <a class="nav-link  active" href="/info" id="homeMenu"  >Home</a>
+                            
                         </li>
     
                         <!-- Nav item 2 Pages -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="pagesMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
+							<ul class="dropdown-menu" aria-labelledby="homeMenu">
+                                <li> <a class="dropdown-item" href="/info/article/juridique">jurudique</a></li>
+                                <li> <a class="dropdown-item" href="/info/article/scientifique">scientifique</a></li>
+                                <li> <a class="dropdown-item" href="/info/index-2.html">et quelle que chose </a></li>
+							</ul>	
                         </li>
     
                         <!-- Nav item 3 Post -->
