--- a/views/visiteurs/article/listeArticle.ejs
+++ b/views/visiteurs/article/listeArticle.ejs
@@ -34,7 +34,7 @@
                                             <a href="#" class="badge bg-dark mb-2"><i class="fas fa-circle me-2 small fw-bold"></i>Photography</a>
                                             <!-- Title -->
                                             <h2 class="card-title">
-                                                <a href="post-single-6.html" class="btn-link text-reset stretched-link"><%= element.titreArticle  %> </a>
+                                                <a href="/info/article/lire/<%= element.idArticle %> " class="btn-link text-reset stretched-link"><%= element.titreArticle  %> </a>
                                             </h2>
                                             <!-- Author info -->
                                             <div class="d-flex align-items-center position-relative mt-3">
@@ -52,7 +52,7 @@
                                         </div>
                                         <!-- Detail -->
                                         <div class="col-md-6 col-lg-4">
-                                            <p><%= element.descriptionArticle  %> </p>
+                                            <p><%= element.desc %>.... </p>
                                         </div>
                                         <!-- Image -->
                                         <div class="col-md-6 col-lg-3">
