juste changer le <%= en <%-

--- a/views/visiteurs/article/listeArticle.ejs
+++ b/views/visiteurs/article/listeArticle.ejs
@@ -52,7 +52,7 @@
                                         </div>
                                         <!-- Detail -->
                                         <div class="col-md-6 col-lg-4">
-                                            <p><%= element.desc %>.... </p>
+                                            <p><%- element.desc %>.... </p>
                                         </div>
                                         <!-- Image -->
                                         <div class="col-md-6 col-lg-3">
