--- a/views/visiteurs/article/voirArticle.ejs
+++ b/views/visiteurs/article/voirArticle.ejs
@@ -59,7 +59,7 @@
                             <div class="row">
                                 <!-- Main Content START -->
                                 
-                                      <p><span class="dropcap">A</span><%= article.descriptionArticle %>  </p>
+                                      <p><span class="dropcap">A</span><%- article.descriptionArticle %>  </p>
                     
                                     <!-- Divider -->
                                     <div class="text-center h5 mb-4">. . .</div>
