--- a/views/visiteurs/article/listeArticle.ejs
+++ b/views/visiteurs/article/listeArticle.ejs
@@ -56,7 +56,8 @@
                                         </div>
                                         <!-- Image -->
                                         <div class="col-md-6 col-lg-3">
-                                            <img class="rounded-3" src="/front/assets/images/blog/4by3/02.jpg" alt="Card image">
+                                            <img class="rounded-3" src="data:image/png;base64,<%= element.imageArticle %> " alt="Card image" style="height:250px; width: 320px" >
+                                           <!-- <img class="rounded-3" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg==" alt="Red dot" /> -->
                                         </div>
                                     </div>  
                                 </div>  
