--- a/views/visiteurs/article/voirArticle.ejs
+++ b/views/visiteurs/article/voirArticle.ejs
@@ -59,7 +59,7 @@
                             <div class="row">
                                 <!-- Main Content START -->
                                 
-                                      <p><span class="dropcap">A</span><%- article.descriptionArticle %>  </p>
+                                      <p><%- article.descriptionArticle %>  </p>
                     
                                     <!-- Divider -->
                                     <div class="text-center h5 mb-4">. . .</div>
@@ -83,39 +83,55 @@
                     </div> 
                     <!-- Divider -->
 				    <hr>
-                    <div>
-                        <h3>5 comments</h3>
-                        <!-- Comment level 1-->
-                        <div class="my-4 d-flex">
-                          <img class="avatar avatar-md rounded-circle float-start me-3" src="/front/assets/images/avatar/01.jpg" alt="avatar">
-                          <div>
-                            <div class="mb-2">
-                                <h5 class="m-0">Allen Smith</h5>
-                                <span class="me-3 small">June 11, 2021 at 6:01 am </span>
-                                <a href="#" class="text-body fw-normal">Reply</a>
-                            </div>
-                            <p>Satisfied conveying a dependent contented he gentleman agreeable do be. Warrant private blushes removed an in equally totally if. Delivered dejection necessary objection do Mr prevailed. Mr feeling does chiefly cordial in do. </p>
-                          </div>
+                    <% if (commentaire.length > 0 ) { %>
+                        <div>
+                            <h3> <%= commentaire.length %>  comments</h3>
+                            <!-- Comment level 1-->
+                            <% commentaire.forEach(element => { %>
+                                <div class="my-4 d-flex">
+                                    <div>
+                                      <div class="mb-2">
+                                          <h5 class="m-0"><%= element.nomOuEmail  %> </h5>                                        
+                                      </div>
+                                      <p><%= element.contenuCommentaire %> </p>
+                                    </div>
+                                  </div>
+                            <% }) %>
+                            <!--ajout commentaire-->
+                            <h3>Ajouter un comentaire</h3>
+                            <form class="row g-3 mt-2" method="post" action="/info/article/ajoutCommentaire/<%= article.idArticle%> ">
+                                <div class="col-md-6">
+                                    <label class="form-label">votre Nom</label>
+                                    <input type="text" name="nomOuEmail" class="form-control" aria-label="First name">
+                                </div>
+                                <div class="col-12">
+                                    <label class="form-label">votre commentaire</label>
+                                      <textarea name="contenu" class="form-control" rows="3"></textarea>
+                                </div>
+                                <div class="col-12">
+                                    <button type="submit" class="btn btn-primary"> votre commentaire</button>
+                                </div>
+                            </form>
                         </div>
-                        <!--ajout commentaire-->
-                        <h3>Leave a reply</h3>
-                        <small>Your email address will not be published. Required fields are marked *</small>
-                        <form class="row g-3 mt-2">
-                            <div class="col-md-6">
-                                <label class="form-label">Name *</label>
-                                <input type="text" class="form-control" aria-label="First name">
-                            </div>
-                            <div class="col-12">
-                                <label class="form-label">Your Comment *</label>
-                                  <textarea class="form-control" rows="3"></textarea>
-                            </div>
-                            <div class="col-12">
-                                <button type="submit" class="btn btn-primary">Post comment</button>
-                            </div>
-                        </form>
-                    </div>    
-                       
-
+                    <% } else { %>
+                        <div>
+                            <h3> 0 commentaire </h3>
+                            <form class="row g-3 mt-2" method="post" action="/info/article/ajoutCommentaire/<%= article.idArticle%> ">
+                                <div class="col-md-6">
+                                    <label class="form-label">Name *</label>
+                                    <input type="text" name="nomOuEmail" class="form-control" aria-label="First name">
+                                </div>
+                                <div class="col-12">
+                                    <label class="form-label">Your Comment *</label>
+                                      <textarea name="contenu" class="form-control" rows="3"> </textarea>
+                                </div>
+                                <div class="col-12">
+                                    <button type="submit" class="btn btn-primary">Post comment</button>
+                                </div>
+                            </form>
+                        </div>
+                    <% } %>   
+                     
                 </div>
             </div>
         </section>
