--- a/views/visiteurs/index.ejs
+++ b/views/visiteurs/index.ejs
@@ -301,11 +301,11 @@
 							<img class="rounded-3" src="data:image/png;base64,<%= element.imageArticle %> " alt="Card image" style="height:250px; width: 320px" >
 						</div>
 						<div class="card-body px-0 pt-3">
-							<h4 class="card-title"><a href="/info/article/lire/<%= element.idArticle %>" class="btn-link text-reset stretched-link fw-bold"><%= element.titreArticle  %></a></h4>
+							<h4 class="card-title"><a href="/info/article/lire/<%= element.idArticle %>" class="btn-link text-reset stretched-link fw-bold"><%= element.titreArticle  %></a> <a href="#" class="badge <% if (element.typeArticle.libelleTypeAticle=='scientifique') { %><%='bg-primary'%><% }%> <% if (element.typeArticle.libelleTypeAticle=='juridique') { %><%='bg-dark'%><% }%> <% if (element.typeArticle.libelleTypeAticle=='economique') { %><%='bg-danger'%><% }%>    mb-2"><i class="fas fa-circle me-2 small fw-bold"></i><%= element.typeArticle.libelleTypeAticle  %> </a></h4>
 							<!-- Card info -->
 							<ul class="nav nav-divider align-items-center text-uppercase small">
 								<li class="nav-item">
-									<a href="#" class="nav-link text-reset btn-link"><%- element.desc %></a>
+									<a href="#" class="nav-link text-reset btn-link"><%-element.desc %></a>
 								</li>
 								<li class="nav-item">Mar 07, 2021</li>
 							</ul>
