--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -48,8 +48,8 @@
                     <!-- Nav Search START -->
                     <div class="nav mt-3 mt-lg-0 px-4 flex-nowrap align-items-center">
                         <div class="nav-item w-100">
-                            <form class="rounded position-relative">
-                                <input class="form-control pe-5 bg-light" type="search" placeholder="Search the blog" aria-label="Search">
+                            <form class="rounded position-relative" method="post" action="/info/chercher">
+                                <input class="form-control pe-5 bg-light" name="chercher" type="search" placeholder="chercher un article"  aria-label="Search">
                                 <button class="btn bg-transparent px-2 py-0 position-absolute top-50 end-0 translate-middle-y" type="submit"><i class="bi bi-search fs-5"> </i></button>
                             </form>
                         </div>
@@ -65,17 +65,20 @@
     
                         <!-- Nav item 2 Pages -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="pagesMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="homeMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
 							<ul class="dropdown-menu" aria-labelledby="homeMenu">
                                 <li> <a class="dropdown-item" href="/info/article/juridique">jurudique</a></li>
                                 <li> <a class="dropdown-item" href="/info/article/scientifique">scientifique</a></li>
-                                <li> <a class="dropdown-item" href="/info/index-2.html">et quelle que chose </a></li>
+                                <li> <a class="dropdown-item" href="/info/article/economique"> economique  </a></li>
 							</ul>	
                         </li>
     
                         <!-- Nav item 3 Post -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="postMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Post</a>
+                            <ul class="dropdown-menu" aria-labelledby="postMenu">
+                                <li> <a class="dropdown-item" href="/info/login">login</a></li>
+							</ul>	
                         </li>
     
                     </ul>
