--- a/views/include/side.ejs
+++ b/views/include/side.ejs
@@ -39,26 +39,39 @@
           <hr class="navbar-divider my-3">
     
           <div>
-            <h6 class="navbar-heading">
+            <h6 class="navbar-heading ">
               Article
             </h6>
       
-            <ul class="navbar-nav mb-md-4">
+            <ul class="navbar-nav ">
               <li class="nav-item">
-                <a class="nav-link" href="#"  role="button" aria-expanded="false" aria-controls="sidebarBasics">
-                    <i class="fe fe-clipboard"></i> Liste
+                <a class="nav-link  " href="#sidebarPages" data-bs-toggle="collapse" role="button" aria-expanded="true" aria-controls="sidebarPages">
+                    <i class="fe fe-clipboard"></i> Modifier Article
                 </a>
+                <div class="collapse show" id="sidebarPages">
+                  <ul class="nav nav-sm flex-column">
+                    <li class="nav-item">
+                      <a href="/info/admin/article/liste/juridique" class="nav-link" role="button" aria-expanded="false" aria-controls="sidebarAccount">
+                        juridique
+                      </a>
+                      <a href="/info/admin/article/liste/scientifique" class="nav-link" role="button" aria-expanded="false" aria-controls="sidebarAccount">
+                        scientifique
+                      </a>
+                      <a href="/info/admin/article/liste/economique" class="nav-link" role="button" aria-expanded="false" aria-controls="sidebarAccount">
+                         economique
+                      </a>
+                    </li>
+                  </ul>
+                </div>      
               </li>
+
+
               <li class="nav-item">
-                <a class="nav-link" href="ajout.html"  role="button" aria-expanded="false" aria-controls="sidebarComponents">
+                <a class="nav-link" href="/info/admin/article/create"  role="button" aria-expanded="false" aria-controls="sidebarComponents">
                   <i class="fe fe-book-open"></i> Ajouter
                 </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link " href="docs/changelog.html">
-                  <i class="fe fe-git-branch"></i> Changelog <span class="badge bg-primary ms-auto">v2.0.0</span>
-                </a>
-              </li>
+             
             </ul>
           </div>
 
@@ -66,29 +79,6 @@
           <hr class="navbar-divider my-3">
 
 
-          <div>
-            <h6 class="navbar-heading">
-              Publicité
-            </h6>
-    
-            <ul class="navbar-nav mb-md-4">
-              <li class="nav-item">
-                <a class="nav-link" href="#sidebarBasics"  role="button" aria-expanded="false" aria-controls="sidebarBasics">
-                  <i class="fe fe-clipboard"></i> Basics
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#sidebarComponents"  role="button" aria-expanded="false" aria-controls="sidebarComponents">
-                  <i class="fe fe-book-open"></i> Components
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="docs/changelog.html">
-                  <i class="fe fe-git-branch"></i> Changelog <span class="badge bg-primary ms-auto">v2.0.0</span>
-                </a>
-              </li>
-            </ul>
-          </div>
 
           <div class="mt-auto"></div>
         </div>
