--- a/views/visiteurs/article/voirArticle.ejs
+++ b/views/visiteurs/article/voirArticle.ejs
@@ -105,7 +105,7 @@
                                     <input type="text" name="nomOuEmail" class="form-control" aria-label="First name">
                                 </div>
                                 <div class="col-12">
-                                    <label class="form-label">votre commentaire</label>
+                                    <label id="comment" class="form-label">votre commentaire</label>
                                       <textarea name="contenu" class="form-control" rows="3"></textarea>
                                 </div>
                                 <div class="col-12">
